--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ sudo: required
 before_install:
   - git clone https://github.com/wiztigers/docgen.git docgen
   - chmod +x docgen/setup.sh docgen/docgen.py
-  - ./docgen/setup.sh sass
+  - ./docgen/setup.sh sass SR54
 
 script:
-  - ./docgen/docgen.py --html --input book.adoc  --output index.html --outdir gh-pages --stylesheet SR54 --stylesdir sass --linkstyle
+  - ./docgen/docgen.py --html --input book.adoc  --output index.html --outdir gh-pages --stylename SR54 --stylesdir sass --linkstyle
   - ./docgen/docgen.py --pdf  --input index.html --output book.pdf   --outdir gh-pages
 
 # https://docs.travis-ci.com/user/deployment/pages/
