--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
-  commiter-from-gh: true
+  committer-from-gh: true
   local-dir: gh-pages
   on:
     branch: master
