break the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - ./docgen/setup.sh sass ${stylename}
 
 script:
-  - ./docgen/docgen.py -v --html --input i18n/en/${book}.adoc  --output index.html --outdir gh-pages/en --stylename ${stylename} --stylesdir sass
-  - ./docgen/docgen.py -v --html --input i18n/fr/${book}.adoc  --output index.html --outdir gh-pages/fr --stylename ${stylename} --stylesdir sass
+  - ./docgen/docgen.py -v --html --input i18n/en/${book}.adoc  --output index.html --outdir gh-pages/en --stylename ${stylename} --stylesdir sass --linkstyle
+  - ./docgen/docgen.py -v --html --input i18n/fr/${book}.adoc  --output index.html --outdir gh-pages/fr --stylename ${stylename} --stylesdir sass --linkstyle
   - ./docgen/docgen.py -v --pdf  --input gh-pages/en/index.html --output ${book}.pdf   --outdir gh-pages/en
   - ./docgen/docgen.py -v --pdf  --input gh-pages/fr/index.html --output ${book}.pdf   --outdir gh-pages/fr
   - cp -r www/* gh-pages
